--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script src="https://kit.fontawesome.com/296c13f979.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon-32x32.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon-16x16.png" /> -->
+    <link rel="manifest" href="/site.webmanifest" />
+    <title>Code-to-Memory</title>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
   </head>
   <body>
     <div id="root"></div>
